trained a ANN on mnist dataset with bekar accuracy

--- a/2_Forward-Propagation/Customer-Churn-Prediction/Customer-Churn-Prediction.ipynb
+++ b/2_Forward-Propagation/Customer-Churn-Prediction/Customer-Churn-Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "53dac320-bfd0-4948-9ec2-0ddc33b9b0b5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5b4d647f-4298-47fe-aaa8-751fa061ec7f",
    "metadata": {},
    "outputs": [],
@@ -1012,6 +1012,27 @@
    ],
    "source": [
     "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "468d2b76-6f9c-4300-92fb-2060eee42f20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8000, 11)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
    ]
   },
   {
