trained a ANN on mnist dataset with bekar accuracy

--- a/2_Forward-Propagation/Customer-Churn-Prediction/Customer-Churn-Prediction.ipynb
+++ b/2_Forward-Propagation/Customer-Churn-Prediction/Customer-Churn-Prediction.ipynb
@@ -2139,8 +2139,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "034080b9-8a58-4d38-8623-a5d77546b982",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CreditScore</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Balance</th>\n",
+       "      <th>NumOfProducts</th>\n",
+       "      <th>HasCrCard</th>\n",
+       "      <th>IsActiveMember</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <th>Geography_Germany</th>\n",
+       "      <th>Geography_Spain</th>\n",
+       "      <th>Gender_Male</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9953</th>\n",
+       "      <td>550</td>\n",
+       "      <td>47</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>97057.28</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3850</th>\n",
+       "      <td>680</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3</td>\n",
+       "      <td>143292.95</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>66526.01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4962</th>\n",
+       "      <td>531</td>\n",
+       "      <td>42</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>90537.47</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3886</th>\n",
+       "      <td>710</td>\n",
+       "      <td>34</td>\n",
+       "      <td>8</td>\n",
+       "      <td>147833.30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1561.58</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5437</th>\n",
+       "      <td>543</td>\n",
+       "      <td>30</td>\n",
+       "      <td>6</td>\n",
+       "      <td>73481.05</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>176692.65</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3919</th>\n",
+       "      <td>763</td>\n",
+       "      <td>39</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19458.75</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>800</td>\n",
+       "      <td>49</td>\n",
+       "      <td>7</td>\n",
+       "      <td>108007.36</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>47125.11</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7903</th>\n",
+       "      <td>567</td>\n",
+       "      <td>34</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>161571.79</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2242</th>\n",
+       "      <td>621</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>101014.08</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>165257.31</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2745</th>\n",
+       "      <td>655</td>\n",
+       "      <td>52</td>\n",
+       "      <td>9</td>\n",
+       "      <td>144696.75</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>49025.79</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2000 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      CreditScore  Age  Tenure    Balance  NumOfProducts  HasCrCard  \\\n",
+       "9953          550   47       2       0.00              2          1   \n",
+       "3850          680   34       3  143292.95              1          1   \n",
+       "4962          531   42       2       0.00              2          0   \n",
+       "3886          710   34       8  147833.30              2          0   \n",
+       "5437          543   30       6   73481.05              1          1   \n",
+       "...           ...  ...     ...        ...            ...        ...   \n",
+       "3919          763   39       7       0.00              2          1   \n",
+       "162           800   49       7  108007.36              1          0   \n",
+       "7903          567   34      10       0.00              2          0   \n",
+       "2242          621   30       2  101014.08              2          1   \n",
+       "2745          655   52       9  144696.75              1          1   \n",
+       "\n",
+       "      IsActiveMember  EstimatedSalary  Geography_Germany  Geography_Spain  \\\n",
+       "9953               1         97057.28              False            False   \n",
+       "3850               0         66526.01              False            False   \n",
+       "4962               1         90537.47              False            False   \n",
+       "3886               1          1561.58               True            False   \n",
+       "5437               1        176692.65               True            False   \n",
+       "...              ...              ...                ...              ...   \n",
+       "3919               0         19458.75              False             True   \n",
+       "162                0         47125.11              False            False   \n",
+       "7903               1        161571.79              False             True   \n",
+       "2242               1        165257.31               True            False   \n",
+       "2745               1         49025.79               True            False   \n",
+       "\n",
+       "      Gender_Male  \n",
+       "9953         True  \n",
+       "3850         True  \n",
+       "4962        False  \n",
+       "3886         True  \n",
+       "5437         True  \n",
+       "...           ...  \n",
+       "3919        False  \n",
+       "162         False  \n",
+       "7903         True  \n",
+       "2242        False  \n",
+       "2745         True  \n",
+       "\n",
+       "[2000 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f917fae-d125-445d-830c-7712ceff9328",
    "metadata": {},
    "outputs": [],
    "source": []
